--- a/source/compliance/index.html.slim
+++ b/source/compliance/index.html.slim
@@ -12,8 +12,11 @@ collectionName: "product"
 # collectionOrder: 2
 priority: "0.9"
 ---
-- current_page.data.share_image = image_share_platform
-- featured_img = "https://images.ctfassets.net/189dvqdsjh46/40nTU46iGkIsck8qEa0qcm/f7a9bab25f465f62ad6043a53744aaef/group_working_on_computer_-_istockphoto-835579140-edit_2__pale_right.jpg"
+ruby:
+  current_page.data.asset_preload = '<link href="' + bg_product_dark + '" rel="preload" as="image" />'
+  # current_page.data.share_image = image_share_platform
+  featured_img = "https://images.ctfassets.net/189dvqdsjh46/40nTU46iGkIsck8qEa0qcm/f7a9bab25f465f62ad6043a53744aaef/group_working_on_computer_-_istockphoto-835579140-edit_2__pale_right.jpg"
+  current_page.data.share_image = featured_img
 
 /= partial "partials/snippets/platform-icons"
 section.hide-for-large
