--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -31,7 +31,7 @@ section#top.bg-gray-12.container-image-fill.lozad data-background-image=bg_produ
           li
             a.text-bold.spaced-out href="/compliance/" Compliance
           li
-            a.text-bold.spaced-out href="/integrations/" Integration
+            a.text-bold.spaced-out href="/integration/" Integration
           li
             a.text-bold.spaced-out href="/about/" About Datica
     .row.align-center
