--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -36,7 +36,7 @@ section#top.bg-gray-12.container-image-fill.lozad data-background-image=bg_produ
             a.text-bold.spaced-out href="/about/" About Datica
     .row.align-center
       .columns.shrink
-        = partial "partials/snippets/button", :locals => { :label => "Ask a Datica Expert", :url => "/compliance/", :icon_align => "right", :button_classes => "button hollow", :icon => "icon-chat" }
+        = partial "partials/snippets/button", :locals => { :label => "Ask a Datica Expert", :url => "/contact/", :icon_align => "right", :button_classes => "button hollow", :icon => "icon-chat" }
       .columns.shrink
         = partial "partials/snippets/button", :locals => { :label => "Get a demo", :url => "/integration/", :button_classes => "button primary", :icon => "icon-chevron-right", :icon_align => "right", :item_id => "page-bottom", :data_track_group => "cmi" }
 .strip-bright
