--- a/source/compliance/index.html.slim
+++ b/source/compliance/index.html.slim
@@ -44,7 +44,7 @@ scss:
     height: 2px;
     position: relative;
     background: repeating-linear-gradient(to right,white 0,white 8px,transparent 8px,transparent 15px);
-    &::before, &::after {
+    &::before, &::after { // svg data-URI of chevron shape
       content: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='18' viewBox='0 2 16 14'%3E%3Cpolygon fill='%23fff' points='5.665 1 4 2.645 9.408 8 4 13.355 5.665 15 12.75 8'/%3E%3C/svg%3E");
       display: inline-block;
       width: 16px;
@@ -52,13 +52,13 @@ scss:
       margin: -7px;
       transform-origin: 48%;
       position: absolute;
-      margin: 5px;
     }
     &::before {
       transform: rotate(180deg);
+      left: -5px;
     }
     &::after {
-      right: 0;
+      right: -5px;
     }
   }
 
@@ -75,16 +75,16 @@ section#compliance-products.section-article.bg-gray-3.container-image-fill.lozad
   .row
     .column
       .border-dash-line
-  .row.align-justify
+  .row.align-justify.text-small
     .columns.small-12.medium-4
-      p.small Quickly deploy compliant apps on a hosted platform with a robust BAA.
-      p.small You gain speed, at the cost of control and flexibility.
+      p Quickly deploy compliant apps on a hosted platform with a robust BAA.
+      p You gain speed, at the cost of control and flexibility.
     .columns.small-12.medium-4
-      p.small Apps and services need to scale and grow, with more orchestration and management needs.
-      p.small You gain more control & scalability, and take on more responsbility for compliance.
+      p Apps and services need to scale and grow, with more orchestration and management needs.
+      p You gain more control & scalability, and take on more responsbility for compliance.
     .columns.small-12.medium-4
-      p.small Complete control and visibility into your compliance state. 
-      p.small You gain control, but are responsible for maintaining compliance.
+      p Complete control and visibility into your compliance state. 
+      p You gain control, but are responsible for maintaining compliance.
 
   .row.collapse.align-center.small-up-1.medium-large-up-2.large-up-3.row--card-grid
     .column.relative.has-blob
