text alignment on lens labels

--- a/source/compliance/index.html.slim
+++ b/source/compliance/index.html.slim
@@ -67,7 +67,7 @@ section#compliance-products.section-article.bg-gray-3.container-image-fill.lozad
     .columns.small-12.medium-10.large-8.text-center
       h2.headline-2 Compliance Solutions
       p.lead <strong>You have complex problems.</strong> Datica has a family of powerful solutions. Powerful when used on their own but meant to work together, our products and solutions address your most complex challenges.
-  .row.align-justify
+  .row.align-justify.text-center
     .columns.small-12.medium-4 
       h3.headline-3.text-italic.text-serif.nomargin Simplicity & speed
     .columns.small-12.medium-4 
