adding spacing below buttons

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -44,7 +44,7 @@ section#products.section-article.bg-gray-3.container-image-fill.lozad data-backg
   .row.align-center
     .columns.small-12.medium-12.large-8.text-center
       h2.headline-1.text-bold What's your biggest challenge?
-  .row.align-center
+  .row.align-center.group
     .columns.shrink
       = partial "partials/snippets/button", :locals => { :label => "I need to pass a HITRUST audit", :url => "/compliance/", :icon_align => "left", :button_classes => "button button--light", :icon => "icon-chevron-left" }
     .columns.shrink
