--- a/source/assets/scss/modules/overrides.scss
+++ b/source/assets/scss/modules/overrides.scss
@@ -184,13 +184,20 @@
 
 // normally containers set child colors, when possible; when not, use these link color overrides.
 .link {
-    &--white, .link-light {
+    &--white, &-light {
         font-weight: $font-weight-bold;
         color: $white !important;
         border-bottom: 1px solid transparent;
         &:hover {
             color: lighten($color_yellow-glow, 5%) !important;
             border-bottom: 1px solid lighten($color_yellow-glow, 5%);
+        }
+    }
+    &-light-plain {
+        color: white !important;
+        border: none;
+        &:hover {
+            border: none;
         }
     }
     &--yellow {
