--- a/source/integration/index.html.slim
+++ b/source/integration/index.html.slim
@@ -14,8 +14,9 @@ priority: "0.9"
 ---
 ruby:
   current_page.data.asset_preload = '<link href="' + bg_product_dark + '" rel="preload" as="image" />'
-  current_page.data.share_image = image_share_platform
+  # current_page.data.share_image = image_share_platform
   featured_img = "https://images.ctfassets.net/189dvqdsjh46/62MYHqth60wmUosWQQ0es8/470d9a7b58ffede77ae3d064cf86b655/office_-_istockphoto-626637134_edit.jpg"
+  current_page.data.share_image = featured_img
 / = partial "partials/snippets/platform-icons"
 scss:
   .pull-down { // adjust top margin to open up image, this page only
@@ -73,7 +74,7 @@ section#products.section-article.bg-gray-3.container-image-fill.lozad data-backg
       / .blob-color.blob-cmi.z-auto data-glow="false"
   .row
     .columns.small-12.medium-6.large-6
-      p.lead We combine cutting-edge automation of cloud infrastructure security, devOps processes, and interface engines, with our extensive experience in solving healthcare integration problems. All built on a solid foundation of <strong>continuous HIPAA compliance</strong>.
+      p.lead We combine cutting-edge automation of cloud infrastructure security, DevOps processes, and interface engines, with our extensive experience in solving healthcare integration problems. All built on a solid foundation of <strong>continuous HIPAA compliance</strong>.
       = partial "partials/snippets/button", :locals => { :label => "Learn more about CMI", :url => "/compliant-managed-integration/", :button_classes => "button button--light button-inline", :item_id => "product-group-cks", :icon => "icon-chevron-right", :icon_align => "right" }
     .columns.small-12.medium-6.large-6
       = partial("partials/cards/quote-customer", :locals => { :customer => data.site.customers['66BznN8Y482iSswswQAice'], :classes => 'nopad bg-gray-11' })
@@ -93,7 +94,7 @@ section#products.section-article.bg-gray-3.container-image-fill.lozad data-backg
       = partial "partials/snippets/button", :locals => { :label => "Ask about Datica Services", :url => "/compliant-managed-integration#services", :button_classes => "button button--light button-inline", :item_id => "product-group-cpaas", :icon => "icon-chevron-right", :icon_align => "right" }
     .columns.small-12.medium-6.large-6
       h4.headline-5 Project Management
-      p Our team of project managers provide an expert view into integrated with EHRs and health systems. They will help manage timelines, create project plans, and track deliverables.
+      p Our team of project managers provides an expert view into integrated with EHRs and health systems. They will help manage timelines, create project plans, and track deliverables.
       h4.headline-5 Connection Setup and Maintenance
       p Datica’s Integration Engineers will build, configure, test and maintain VPN connections to allow for transmission of HL7 messages.
       h4.headline-5 Interface Build and Configuration
